# beet-scheduler

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  ISSUES.md  Justfile  README.md  REUSE.toml  fly.toml
.config/: coverage-baseline-darwin.json  coverage-baseline-linux.json  goblinmode.toml
.github/workflows/: ci.yml  docker.yml
docs/specs/: editing.md
docs/superpowers/plans/: 2026-04-14-editing.md
docs/superpowers/specs/: 2026-04-14-editing-design.md
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs
src/handlers/: home.rs  meetings.rs  mod.rs  respond.rs
static/: style.css
templates/: base.html  home.html  meeting.html
templates/partials/: grid.html
tests/: docker_test.sh  integration.rs
