# SPDX-FileCopyrightText: 2026 Miikka Koskinen
#
# SPDX-License-Identifier: MIT

[package]
name = "beet-scheduler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "beet-scheduler"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1", features = ["full"] }
axum         = { version = "0.8", features = ["macros"] }
tower-http   = { version = "0.6", features = ["fs", "trace"] }
rusqlite     = { version = "0.32", features = ["bundled"] }
minijinja    = { version = "2", features = ["loader"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_qs     = "0.13"
chrono       = { version = "0.4", features = ["serde"] }
config       = "0.14"
rand         = "0.10"
subtle       = "2"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"], default-features = false }
tempfile = "3"
